apps/base/swpt-creditors/trade/solver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-solver
  labels:
    app.kubernetes.io/name: swpt-trade
    app.kubernetes.io/component: solver
    app: solver
spec:
  replicas: 1  # Must always be exactly 1!
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-trade
      app.kubernetes.io/component: solver
      app: solver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-trade
        app.kubernetes.io/component: solver
        log.pipeline: swpt-python-logging
        app: solver
    spec:
      priorityClassName: trade-solver
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: trade-solver
          image: swpt-trade
          args: ['solver']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
