apps/base/swpt-creditors/trade/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-web-server
  labels:
    app.kubernetes.io/name: swpt-trade
    app.kubernetes.io/component: web-server
    app: trade-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-trade
      app.kubernetes.io/component: web-server
      app: trade-web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-trade
        app.kubernetes.io/component: web-server
        log.pipeline: swpt-python-logging
        app: trade-web-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: swpt-trade
                app.kubernetes.io/component: web-server
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: user-ui-webserver
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: web-server
          image: swpt-trade
          args: ['webserver']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /trade/health/check/public
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /trade/health/check/public
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: trade-web-server
  labels:
    app.kubernetes.io/name: swpt-trade
    app.kubernetes.io/component: web-server
spec:
  selector:
    app.kubernetes.io/name: swpt-trade
    app.kubernetes.io/component: web-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-trade
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # Here "namespace" will be automatically replaced with the name of
  # the current namespace.
  #
  ingressClassName: namespace.nginx

  # Here "public-hostname" will be automatically replaced with the
  # real public hostname of the Swaptacular node.
  #
  tls:
  - hosts:
    - public-hostname
    secretName: acme-cert-key

  rules:
  # Here "public-hostname" will be automatically replaced with the
  # real public hostname of the Swaptacular node.
  #
  - host: public-hostname
    http:
      paths:
      - path: /trade/
        pathType: Prefix
        backend:
          service:
            name: trade-web-server
            port:
              name: http
